# libiec61850

./: .gitignore  CHANGELOG  README.md  bitbucket-pipelines.yml  release_script.sh
.github/workflows/: build.yml
config/: stack_config.h
dotnet/: dotnet.sln
dotnet/IEC61850forCSharp/: AcseAuthenticationParameter.cs  GooseControlBlock.cs  Goosing.cs  IEC61850.NET.csproj  IEC61850ClientAPI.cs  IEC61850CommonAPI.cs  IEC61850ServerAPI.cs  MmsValue.cs  SampledValuesControlBlock.cs  TLS.cs
dotnet/authenticate/: authenticate.csproj
dotnet/control/: control.csproj
dotnet/datasets/: datasets.csproj
dotnet/example1/: example1.csproj
dotnet/example2/: example2.csproj
dotnet/example3/: example3.csproj
dotnet/files/: files.csproj
dotnet/log_client/: log_client.csproj
dotnet/log_server/: log_server.csproj
dotnet/model_browsing/: model_browsing.csproj
dotnet/report_new_dataset/: report_new_dataset.csproj
dotnet/reporting/: reporting.csproj
dotnet/server1/: Program.cs  server1.csproj
dotnet/server_example_access_control/: Program.cs  model.cfg  server_example_access_control.csproj
dotnet/tests/: tests.csproj
dotnet/tls_client_example/: tls_client_example.csproj
examples/: CMakeLists.txt  Makefile
examples/iec61850_9_2_LE_example/: iec61850_9_2_LE_example.c  static_model.c
examples/iec61850_client_example5/: client_example5.c
examples/server_example_CMV/: Makefile  static_model.c  static_model.h
examples/server_example_SMV/: CMakeLists.txt  sampleModel.cid  server_example_SMV.c
src/goose/: goose_receiver.c
src/vs/: libiec61850-wo-goose.def  (+1 more)
(+45 files in other folders)
